feat(api): adiciona a rota de contagem de jogos cadastrados
